Adding dll for admob to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,17 @@ AppWarp/
 DirectXTK/
 !DirectXTK/DirectXTK_readme.txt
 
-# google-play-services_lib
-google-play-services_lib/
-!google-play-services_lib/google-play-services_lib_readme.txt
+# GoogleMobileAdsSdkWindowsPhone8-6.5.13
+GoogleMobileAdsSdkWindowsPhone8-6.5.13/
+!GoogleMobileAdsSdkWindowsPhone8-6.5.13/GoogleMobileAdsSdkWindowsPhone8-6.5.13_readme.txt
 
 # GoogleMobileAdsSdkiOS-6.11
 GoogleMobileAdsSdkiOS-6.11.1/
 !GoogleMobileAdsSdkiOS-6.11.1/GoogleMobileAdsSdkiOS-6.11.1_readme.txt
+
+# google-play-services_lib
+google-play-services_lib/
+!google-play-services_lib/google-play-services_lib_readme.txt
 
 # gson
 gson/
