--- a/src/platform/android/AndroidManifest.xml
+++ b/src/platform/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.technegames.battlebombsbeta"
-    android:versionCode="3"
-    android:versionName="0.2.0.0" >
+    package="com.technegames.battlebombs"
+    android:versionCode="1"
+    android:versionName="1.0.0" >
 
     <!-- Signing Key Info: T3chn3G4m35, T3chn3G4m35 -->
 
