--- a/src/platform/ios/battlebombs-Info.plist
+++ b/src/platform/ios/battlebombs-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.technegames.battlebombsbeta</string>
+	<string>com.technegames.battlebombs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
