Rect Batching and updating GoogleMobileAdsSdk for iOS

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ AppWarp/
 GoogleMobileAdsSdkWindowsPhone8-6.5.13/
 !GoogleMobileAdsSdkWindowsPhone8-6.5.13/GoogleMobileAdsSdkWindowsPhone8-6.5.13_readme.txt
 
-# GoogleMobileAdsSdkiOS-6.11
-GoogleMobileAdsSdkiOS-6.11.1/
-!GoogleMobileAdsSdkiOS-6.11.1/GoogleMobileAdsSdkiOS-6.11.1_readme.txt
+# GoogleMobileAdsSdkiOS-6.12.0
+#GoogleMobileAdsSdkiOS-6.12.0/
+!GoogleMobileAdsSdkiOS-6.12.0/GoogleMobileAdsSdkiOS-6.12.0_readme.txt
 
 # google-play-services_lib
 google-play-services_lib/
