--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ GoogleMobileAdsSdkWindowsPhone8-6.5.13/
 !GoogleMobileAdsSdkWindowsPhone8-6.5.13/GoogleMobileAdsSdkWindowsPhone8-6.5.13_readme.txt
 
 # GoogleMobileAdsSdkiOS-6.12.0
-#GoogleMobileAdsSdkiOS-6.12.0/
+GoogleMobileAdsSdkiOS-6.12.0/
 !GoogleMobileAdsSdkiOS-6.12.0/GoogleMobileAdsSdkiOS-6.12.0_readme.txt
 
 # google-play-services_lib
