--- a/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
+++ b/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
@@ -160,7 +160,7 @@
     <ClInclude Include="..\..\..\..\..\core\CountDownNumberGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\CountDownNumberType.h" />
     <ClInclude Include="..\..\..\..\..\core\direct3d\Direct3DRectangleBatcher.h" />
-    <ClInclude Include="..\..\..\..\..\core\direct3d\SpriteBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\direct3d\Direct3DSpriteBatcher.h" />
     <ClInclude Include="..\..\..\..\..\core\DisplayBattleGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\DisplayGameOverGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\DisplayGameOverType.h" />
@@ -204,12 +204,15 @@
     <ClInclude Include="..\..\..\..\..\core\PowerUpBarItem.h" />
     <ClInclude Include="..\..\..\..\..\core\PowerUpType.h" />
     <ClInclude Include="..\..\..\..\..\core\Rectangle.h" />
+    <ClInclude Include="..\..\..\..\..\core\RectangleBatcher.h" />
     <ClInclude Include="..\..\..\..\..\core\Renderer.h" />
     <ClInclude Include="..\..\..\..\..\core\ResourceConstants.h" />
     <ClInclude Include="..\..\..\..\..\core\SpectatorControls.h" />
     <ClInclude Include="..\..\..\..\..\core\SpectatorControlState.h" />
+    <ClInclude Include="..\..\..\..\..\core\SpriteBatcher.h" />
     <ClInclude Include="..\..\..\..\..\core\stlastar.h" />
     <ClInclude Include="..\..\..\..\..\core\TextureRegion.h" />
+    <ClInclude Include="..\..\..\..\..\core\TextureWrapper.h" />
     <ClInclude Include="..\..\..\..\..\core\TouchEvent.h" />
     <ClInclude Include="..\..\..\..\..\core\Triangle.h" />
     <ClInclude Include="..\..\..\..\..\core\Vector2D.h" />
@@ -243,7 +246,7 @@
     <ClCompile Include="..\..\..\..\..\core\BreakableBlock.cpp" />
     <ClCompile Include="..\..\..\..\..\core\CountDownNumberGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\direct3d\Direct3DRectangleBatcher.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\direct3d\SpriteBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\direct3d\Direct3DSpriteBatcher.cpp" />
     <ClCompile Include="..\..\..\..\..\core\DisplayBattleGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\DisplayGameOverGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\DPadControl.cpp" />
@@ -272,8 +275,10 @@
     <ClCompile Include="..\..\..\..\..\core\PowerUp.cpp" />
     <ClCompile Include="..\..\..\..\..\core\PowerUpBarItem.cpp" />
     <ClCompile Include="..\..\..\..\..\core\Rectangle.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\RectangleBatcher.cpp" />
     <ClCompile Include="..\..\..\..\..\core\Renderer.cpp" />
     <ClCompile Include="..\..\..\..\..\core\SpectatorControls.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\SpriteBatcher.cpp" />
     <ClCompile Include="..\..\..\..\..\core\TextureRegion.cpp" />
     <ClCompile Include="..\..\..\..\..\core\TouchEvent.cpp" />
     <ClCompile Include="..\..\..\..\..\core\Triangle.cpp" />
