Graphics, sound, and offline game over delays for WP

--- a/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombs/BattleBombs.csproj
+++ b/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombs/BattleBombs.csproj
@@ -221,6 +221,9 @@
     <Content Include="Assets\force_field_down.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\game.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\game_set.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
