--- a/src/platform/android/AndroidManifest.xml
+++ b/src/platform/android/AndroidManifest.xml
@@ -21,8 +21,7 @@
         android:name="com.technegames.battlebombs.BattleBombsApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:label="@string/app_name" >
 
         <!-- This meta-data tag is required to use Google Play Services. -->
         <meta-data
@@ -36,7 +35,7 @@
             android:theme="@android:style/Theme.Translucent" />
         <activity
             android:name="com.technegames.battlebombs.MainActivity"
-            android:label="@string/app_name"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:screenOrientation="landscape"
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
@@ -47,10 +46,12 @@
         </activity>
         <activity
             android:name="com.technegames.battlebombs.GameActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.technegames.battlebombs.OfflineGameActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:screenOrientation="landscape" >
         </activity>
     </application>
