--- a/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
+++ b/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
@@ -168,9 +168,10 @@
     <ClInclude Include="..\..\..\..\..\core\direct3d\Direct3DSpriteBatcher.h" />
     <ClInclude Include="..\..\..\..\..\core\direct3d\DirectXHelpers.h" />
     <ClInclude Include="..\..\..\..\..\core\direct3d\PlatformHelpers.h" />
-    <ClInclude Include="..\..\..\..\..\core\DisplayBattleGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\DisplayGameOverGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\DisplayGameOverType.h" />
+    <ClInclude Include="..\..\..\..\..\core\DisplayXMovingGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\DisplayXMovingType.h" />
     <ClInclude Include="..\..\..\..\..\core\DPadControl.h" />
     <ClInclude Include="..\..\..\..\..\core\DPadControlState.h" />
     <ClInclude Include="..\..\..\..\..\core\DynamicGameObject.h" />
@@ -255,8 +256,8 @@
     <ClCompile Include="..\..\..\..\..\core\direct3d\Direct3DRectangleBatcher.cpp" />
     <ClCompile Include="..\..\..\..\..\core\direct3d\Direct3DRenderer.cpp" />
     <ClCompile Include="..\..\..\..\..\core\direct3d\Direct3DSpriteBatcher.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\DisplayBattleGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\DisplayGameOverGameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\DisplayXMovingGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\DPadControl.cpp" />
     <ClCompile Include="..\..\..\..\..\core\DynamicGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\DynamicGridGameObject.cpp" />
